<resources>
    <string name="app_name">MD1L1HomeWork</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Home Work 4</string>
    <string name="nav_header_subtitle">Welcome to my com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_progress_bars">Progress bars</string>
    <string name="menu_tools">Tools</string>
    <string name="home_page">Home page</string>
    <string name="progress_bars_page">Progress bars page</string>
    <string name="tools_page">Tools page</string>
    <string name="text_for_fab_text_view">Push the fab button</string>
    <string name="name">Name</string>
    <string name="push_me">Push me</string>
    <string name="spravka">Справка</string>
    <string name="this_is_spravka">Это справка</string>
    <string name="enter_name">Введите имя: </string>
    <string name="button_label_enabled">button enabled</string>
    <string name="text_button_label_enabled">text button enabled</string>
    <string name="text_button_label_disabled">text button disabled</string>
    <string name="button_label_disabled">button disabled</string>
    <string name="unelevated_button_label_enabled">unelevated button enabled</string>
    <string name="round_bar">Round bar</string>
    <string name="horizontal_bar">Horizontal bar</string>
    <string name="push_me_bro">Push me bro</string>
    <string name="fairy_tale">Гостиная Анны Павловны начала понемногу наполняться. Приехала высшая знать Петербурга, люди самые разнородные по возрастам и характерам, но одинаковые по обществу, в каком все жили; приехала дочь князя Василия, красавица Элен, заехавшая за отцом, чтобы с ним вместе ехать на праздник посланника. Она была в шифре и бальном платье. Приехала и известная, как la femme la plus séduisante de Pétersbourg 1, молодая, маленькая княгиня Болконская, прошлую зиму вышедшая замуж и теперь не выезжавшая в большой свет по причине своей беременности, но ездившая еще на небольшие вечера. Приехал князь Ипполит, сын князя Василия, с Мортемаром, которого он представил; приехал и аббат Морио и многие другие.
— Вы не видали еще, — или: — вы не знакомы с ma tante? 2 — говорила Анна Павловна приезжавшим гостям и весьма серьезно подводила их к маленькой старушке в высоких бантах, выплывшей из другой комнаты, как скоро стали приезжать гости, называла их по имени, медленно переводя глаза с гостя на ma tante, и потом отходила.
Все гости совершали обряд приветствования никому не известной, никому не интересной и не нужной тетушки. Анна Павловна с грустным, торжественным участием следила за их приветствиями, молчаливо одобряя их. Ma tante каждому говорила в одних и тех же выражениях о его здоровье, о своем здоровье и о здоровье ее величества, которое нынче было, слава Богу, лучше. Все подходившие, из приличия не выказывая поспешности, с чувством облегчения исполненной тяжелой обязанности отходили от старушки, чтоб уж весь вечер ни разу не подойти к ней.
Молодая княгиня Болконская приехала с работой в шитом золотом бархатном мешке. Ее хорошенькая, с чуть черневшимися усиками верхняя губка была коротка по зубам, но тем милее она открывалась и тем еще милее вытягивалась иногда и опускалась на нижнюю. Как это бывает у вполне привлекательных женщин, недостаток ее — короткость губы и полуоткрытый рот — казались ее особенною, собственно ее красотой. Всем было весело смотреть на эту полную здоровья и живости хорошенькую будущую мать, так легко переносившую свое положение. Старикам и скучающим, мрачным молодым людям казалось, что они сами делаются похожи на нее, побыв и поговорив несколько времени с ней. Кто говорил с ней и видел при каждом слове ее светлую улыбочку и блестящие белые зубы, которые виднелись беспрестанно, тот думал, что он особенно нынче любезен. И это думал каждый.
</string>
    <string name="title_activity_hw6_main">HW6MainActivity</string>
    <string name="strawberry">Strawberry</string>


</resources>
