<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_progress_bars">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.md1l1homework.homeWork4.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/hw4_fragment_home" />

    <fragment
        android:id="@+id/nav_progress_bars"
        android:name="com.example.md1l1homework.homeWork4.ui.progress_bar.ProgressBars"
        android:label="@string/menu_progress_bars"
        tools:layout="@layout/hw4_fragment_progress_bars" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.md1l1homework.homeWork4.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/hw4_fragment_tools" />


</navigation>