<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/material_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_label_enabled" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/disabled_material_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/button_label_disabled" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/material_unelevated_button"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/unelevated_button_label_enabled" />

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clipToPadding="false"
        android:columnCount="2"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/grid_material_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_label_enabled" />

        <Space />
    </GridLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/elevated_material_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label_enabled"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/material_text_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_label_enabled"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/disabled_text_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/text_button_label_disabled"
        android:textSize="24sp" />


</LinearLayout>